--- a/index.html
+++ b/index.html
@@ -4,13 +4,81 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Eng - Learn English Vocabulary with Audio Pronunciation</title>
+    <meta name="title" content="Eng - Learn English Vocabulary with Audio Pronunciation" />
+    <meta name="description" content="Master English vocabulary with our beautiful pink-themed learning app. Create custom folders, add words with translations, and listen to American accent pronunciation. Perfect for language learners!" />
+    <meta name="keywords" content="English vocabulary, learn English, vocabulary app, pronunciation, American accent, language learning, English words, translation, study English" />
+    <meta name="author" content="Eng Vocabulary App" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://eng-vocabulary.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eng-vocabulary.com/" />
+    <meta property="og:title" content="Eng - Learn English Vocabulary with Audio Pronunciation" />
+    <meta property="og:description" content="Master English vocabulary with our beautiful pink-themed learning app. Create custom folders, add words with translations, and listen to American accent pronunciation." />
+    <meta property="og:image" content="https://eng-vocabulary.com/og-image.png" />
+    <meta property="og:site_name" content="Eng Vocabulary App" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://eng-vocabulary.com/" />
+    <meta property="twitter:title" content="Eng - Learn English Vocabulary with Audio Pronunciation" />
+    <meta property="twitter:description" content="Master English vocabulary with our beautiful pink-themed learning app. Create custom folders, add words with translations, and listen to American accent pronunciation." />
+    <meta property="twitter:image" content="https://eng-vocabulary.com/twitter-image.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ff69b4" />
+    <meta name="msapplication-TileColor" content="#ff69b4" />
+
+    <!-- PWA -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Eng Vocab" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Eng - Learn English Vocabulary</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Eng Vocabulary App",
+      "description": "Learn English vocabulary with audio pronunciation in American accent. Create custom folders and organize words with translations.",
+      "url": "https://eng-vocabulary.com",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "Eng Vocabulary App"
+      },
+      "featureList": [
+        "English vocabulary learning",
+        "Audio pronunciation",
+        "Custom folders",
+        "Word translations",
+        "American accent",
+        "Mobile responsive"
+      ],
+      "screenshot": "https://eng-vocabulary.com/og-image.png"
+    }
+    </script>
   </body>
 </html>
